Overflow issues fixed, circular text recentered

--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -7,6 +7,8 @@
     align-items: center;
     gap: 50px;
     font-size: 20px;
+    position: relative;
+    z-index: 1;
 
     a {
         text-decoration: none;
