--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,6 +2,9 @@
 
 html,
 body {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
   padding: 0;
   margin: 0;
   font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -36,21 +39,21 @@ svg {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none; 
+  user-select: none;
 }
 
 .background {
   width: 100%;
-  height: 100%;
   position: fixed;
   top: 0;
+  bottom: 0;
   left: 0;
+  right: 0;
   z-index: 0;
 }
 
 .foreground {
   width: 100%;
-  height: 100%;
   position: relative;
   top: 0;
   left: 0;
